--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </header>
     <div class="container">
         <div class="content">
-            <h2>Vegan Kitten Food Recipe</h2>
+            <h2>Vegan Kitten Food Recipe for Obsidian and Ember</h2>
             <div class="recipe">
                 <h3>Ingredients:</h3>
                 <ul>
